lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_lib/esl_lib.h

// -------------------------------
// General type definitions

// Boolean type
typedef enum esl_lib_bool_e {
  ESL_LIB_FALSE = 0,
  ESL_LIB_TRUE  = 1
} esl_lib_bool_t;
/// Long array type
typedef struct esl_lib_long_array_s {
  uint32_t len;     ///< Number of bytes stored in @p data
  uint8_t  data[0]; ///< Data bytes
} esl_lib_long_array_t;
/// PAWR configuration
typedef struct esl_lib_pawr_config_s {
  struct esl_lib_pawr_config_adv_interval_s {
    uint16_t               min;              ///< Minimum interval
    uint16_t               max;              ///< Maximum interval
  }                        adv_interval;     ///< Advertising interval
  struct esl_lib_pawr_config_subevent_s {
    uint8_t                count;            ///< Subevent count
    uint8_t                interval;         ///< Subevent interval
  }                        subevent;         ///< Subevent config
  struct esl_lib_pawr_config_response_slot_s {
    uint8_t                delay;            ///< Response slot delay
    uint8_t                spacing;          ///< Response slot spacing
    uint8_t                count;            ///< Response slot count
  }                        response_slot;    ///< Response slot config
  esl_lib_bool_t           advertise;        ///< Extended param. adv. enable
} esl_lib_pawr_config_t;
/// Scan parameters
typedef struct esl_lib_scan_parameters_s {
  uint8_t  mode;                 ///< Passive or active scan, 0x0: passive, 0x1: active
  uint16_t interval;             /**< Scan interval. Time = Value x 0.625 ms,
                                      Range: 0x0004 to 0xFFFF, Time Range: 2.5 ms to 40.96 s */
  uint16_t window;               ///< Scan window. Range and factor is the same as for interval above.
  uint8_t  scanning_phy;         /**< The scanning PHY(s). Values:
                                      0x1: Initiate the scanning on the 1M PHY,
                                      0x4: Initiate the scanning on the Coded PHY,
                                      0x5: Simultaneous scanning by initiating the scanning on
                                           the 1M and Coded PHY alternatively. */
  uint8_t  discover_mode;        /**< Bluetooth discovery Mode. Values:
                                      0x0: Discover only limited discoverable devices,
                                      0x1: Discover limited and general discoverable devices,
                                      0x2: Discover non-discoverable, limited and general
                                      discoverable devices. */
} esl_lib_scan_parameters_t;
/// ESL host library event codes
typedef enum esl_lib_evt_type_e {
  ESL_LIB_EVT_SYSTEM_BOOT,
  ESL_LIB_EVT_CONNECTION_MODE,
  ESL_LIB_EVT_SCAN_STATUS,
  ESL_LIB_EVT_TAG_FOUND,
  ESL_LIB_EVT_TAG_INFO,
  ESL_LIB_EVT_CONFIGURE_TAG_RESPONSE,
  ESL_LIB_EVT_CONNECTION_RETRY,
  ESL_LIB_EVT_CONNECTION_CLOSED,
  ESL_LIB_EVT_CONNECTION_OPENED,
  ESL_LIB_EVT_BONDING_DATA,
  ESL_LIB_EVT_BONDING_FINISHED,
  ESL_LIB_EVT_PAWR_CONFIG,
  ESL_LIB_EVT_PAWR_STATUS,
  ESL_LIB_EVT_PAWR_RESPONSE,
  ESL_LIB_EVT_PAWR_DATA_REQUEST,
  ESL_LIB_EVT_SHUTDOWN_READY,
  ESL_LIB_EVT_ERROR,
  ESL_LIB_EVT_IMAGE_TRANSFER_FINISHED,
  ESL_LIB_EVT_IMAGE_TYPE,
  ESL_LIB_EVT_CONTROL_POINT_RESPONSE,
  ESL_LIB_EVT_CONTROL_POINT_NOTIFICATION,
  ESL_LIB_EVT_GENERAL,
} esl_lib_evt_type_t;
/// ESL host library event status codes
typedef enum esl_lib_status_e {
  ESL_LIB_STATUS_NO_ERROR,
  ESL_LIB_STATUS_UNSPECIFIED_ERROR,
  ESL_LIB_STATUS_UNASSOCIATED,
  ESL_LIB_STATUS_GATT_TIMEOUT,
  ESL_LIB_STATUS_BONDING_FAILED,
  ESL_LIB_STATUS_FEATURE_NOT_SUPPORTED,
  ESL_LIB_STATUS_INVALID_STATE,
  ESL_LIB_STATUS_INVALID_PARAMETERS,
  ESL_LIB_STATUS_UNEXPECTED_RESET,
  ESL_LIB_STATUS_GATT_ERROR,
  ESL_LIB_STATUS_CONN_TIMEOUT,
  ESL_LIB_STATUS_CONN_LOST,
  ESL_LIB_STATUS_CONN_FAILED,
  ESL_LIB_STATUS_CONN_CLOSE_FAILED,
  ESL_LIB_STATUS_CONN_DISCOVERY_FAILED,
  ESL_LIB_STATUS_CONN_ESL_SERVICE_VIOLATION,
  ESL_LIB_STATUS_CONN_SUBSCRIBE_FAILED,
  ESL_LIB_STATUS_CONN_READ_FAILED,
  ESL_LIB_STATUS_CONN_CONFIG_FAILED,
  ESL_LIB_STATUS_CONN_SET_MODE_FAILED,
  ESL_LIB_STATUS_LINK_LAYER,
  ESL_LIB_STATUS_NO_PAWR_SYNC,
  ESL_LIB_STATUS_OTS_ERROR,
  ESL_LIB_STATUS_OTS_GOTO_FAILED,
  ESL_LIB_STATUS_OTS_INIT_FAILED,
  ESL_LIB_STATUS_OTS_WRITE_RESP_FAILED,
  ESL_LIB_STATUS_OTS_UNEXPECTED_OFFSET,
  ESL_LIB_STATUS_OTS_TRANSFER_FAILED,
  ESL_LIB_STATUS_OTS_META_READ_FAILED,
  ESL_LIB_STATUS_SCAN_START_FAILED,
  ESL_LIB_STATUS_SCAN_STOP_FAILED,
  ESL_LIB_STATUS_SCAN_CONFIG_FAILED,
  ESL_LIB_STATUS_INIT_FAILED,
  ESL_LIB_STATUS_PAWR_START_FAILED,
  ESL_LIB_STATUS_PAWR_STOP_FAILED,
  ESL_LIB_STATUS_PAWR_CONFIG_FAILED,
  ESL_LIB_STATUS_PAWR_SET_DATA_FAILED,
  ESL_LIB_STATUS_RESOURCE_EXCEEDED,
  ESL_LIB_STATUS_PAST_INIT_FAILED,
  ESL_LIB_STATUS_CONN_WRITE_CP_FAILED,
  ESL_LIB_STATUS_CONN_TAG_CONFIG_FAILED,
  ESL_LIB_STATUS_CONN_INIT_POLICY_FAILED,
  ESL_LIB_STATUS_CONTROL_FAILED,
  ESL_LIB_STATUS_UNKNOWN_COMMAND,
  ESL_LIB_STATUS_SYSTEM_ERROR,
  ESL_LIB_STATUS_DATABASE_ERROR,
  ESL_LIB_STATUS_DATABASE_PERMISSION,
} esl_lib_status_t;
// -------------------------------
// Event data types

/// Event data type
typedef enum esl_lib_data_type_e {
  // GATT related
  ESL_LIB_DATA_TYPE_UNINITIALIZED,
  ESL_LIB_DATA_TYPE_GATT_ESL_ADDRESS,
  ESL_LIB_DATA_TYPE_GATT_AP_SYNC_KEY,
  ESL_LIB_DATA_TYPE_GATT_RESPONSE_KEY,
  ESL_LIB_DATA_TYPE_GATT_CONTROL_POINT,
  ESL_LIB_DATA_TYPE_GATT_CURRENT_TIME,
  ESL_LIB_DATA_TYPE_GATT_DISPLAY_INFO,
  ESL_LIB_DATA_TYPE_GATT_IMAGE_INFO,
  ESL_LIB_DATA_TYPE_GATT_SENSOR_INFO,
  ESL_LIB_DATA_TYPE_GATT_LED_INFO,
  ESL_LIB_DATA_TYPE_GATT_PNP_ID,
  ESL_LIB_DATA_TYPE_GATT_SERIAL_NUMBER,
  ESL_LIB_DATA_TYPE_GATT_OTS_FEATURE,
  ESL_LIB_DATA_TYPE_GATT_OTS_OBJECT_TYPE,
  // PAWR ralated
  ESL_LIB_DATA_TYPE_PAWR_DATA,
  ESL_LIB_DATA_TYPE_PAWR_RESP_SLOT,
  ESL_LIB_DATA_TYPE_PAWR_SUBEVENT,
  ESL_LIB_DATA_TYPE_SUBEVENT_START,
  ESL_LIB_DATA_TYPE_SUBEVENT_DATA_COUNT,
} esl_lib_data_type_t;
/// Type-Length-Value (TLV) type
typedef struct esl_lib_tlv_s {
  esl_lib_data_type_t  type;   ///< Event data type
  esl_lib_long_array_t data;   ///< Length and value
} esl_lib_tlv_t;
/// OTS features
typedef struct esl_lib_ots_features_s {
  uint32_t oacp_features;
  uint32_t olcp_features;
} esl_lib_ots_features_t;
/// GATT characteristic index
typedef enum esl_lib_characteristic_index_e {
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_ADDRESS               = 0,
  ESL_LIB_CHARACTERISTIC_INDEX_AP_SYNC_KEY_MATERIAL      = 1,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_RESPONSE_KEY_MATERIAL = 2,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_CURRENT_ABSOLUTE_TIME = 3,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_DISPLAY_INFORMATION   = 4,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_IMAGE_INFORMATION     = 5,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_SENSOR_INFORMATION    = 6,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_LED_INFORMATION       = 7,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_CONTROL_POINT         = 8,
  ESL_LIB_CHARACTERISTIC_INDEX_SIZE                      = 9
} esl_lib_characteristic_index_t;
typedef enum esl_lib_characteristic_index_dis_e {
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_PNP_ID                = 0,
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_SN                    = 1,
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE                  = 2
} esl_lib_characteristic_index_dis_t;
/// OTS GATT Database handles
typedef uint16_t esl_lib_ots_gattdb_handles_t[12];
/// GATT Database handles
typedef struct esl_lib_gattdb_handles_s {
  struct esl_lib_gattdb_handles_services_s {
    uint32_t esl;
    uint32_t ots;
    uint32_t dis;
  } services;
  uint16_t esl_characteristics[ESL_LIB_CHARACTERISTIC_INDEX_SIZE];
  uint16_t dis_characteristics[ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE];
  esl_lib_ots_gattdb_handles_t ots_characteristics;
} esl_lib_gattdb_handles_t;