lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_lib_wrapper.py


struct_esl_lib_pawr_config_s.__slots__ = [
    'adv_interval',
    'subevent',
    'response_slot',
    'advertise',
]
struct_esl_lib_pawr_config_s._fields_ = [
    ('adv_interval', struct_esl_lib_pawr_config_adv_interval_s),
    ('subevent', struct_esl_lib_pawr_config_subevent_s),
    ('response_slot', struct_esl_lib_pawr_config_response_slot_s),
    ('advertise', esl_lib_bool_t),
]

esl_lib_pawr_config_t = struct_esl_lib_pawr_config_s# esl_lib.h: 257

# esl_lib.h: 275
class struct_esl_lib_scan_parameters_s(Structure):
    pass

struct_esl_lib_scan_parameters_s.__slots__ = [
    'mode',
    'interval',
    'window',
    'scanning_phy',
    'discover_mode',
]
struct_esl_lib_scan_parameters_s._fields_ = [
    ('mode', uint8_t),
    ('interval', uint16_t),
    ('window', uint16_t),
    ('scanning_phy', uint8_t),
    ('discover_mode', uint8_t),
]

esl_lib_scan_parameters_t = struct_esl_lib_scan_parameters_s# esl_lib.h: 275

enum_esl_lib_evt_type_e = c_int# esl_lib.h: 301

ESL_LIB_EVT_SYSTEM_BOOT = 0# esl_lib.h: 301

ESL_LIB_EVT_CONNECTION_MODE = (ESL_LIB_EVT_SYSTEM_BOOT + 1)# esl_lib.h: 301

ESL_LIB_EVT_SCAN_STATUS = (ESL_LIB_EVT_CONNECTION_MODE + 1)# esl_lib.h: 301

ESL_LIB_EVT_TAG_FOUND = (ESL_LIB_EVT_SCAN_STATUS + 1)# esl_lib.h: 301

ESL_LIB_EVT_TAG_INFO = (ESL_LIB_EVT_TAG_FOUND + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONFIGURE_TAG_RESPONSE = (ESL_LIB_EVT_TAG_INFO + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONNECTION_RETRY = (ESL_LIB_EVT_CONFIGURE_TAG_RESPONSE + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONNECTION_CLOSED = (ESL_LIB_EVT_CONNECTION_RETRY + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONNECTION_OPENED = (ESL_LIB_EVT_CONNECTION_CLOSED + 1)# esl_lib.h: 301

ESL_LIB_EVT_BONDING_DATA = (ESL_LIB_EVT_CONNECTION_OPENED + 1)# esl_lib.h: 301

ESL_LIB_EVT_BONDING_FINISHED = (ESL_LIB_EVT_BONDING_DATA + 1)# esl_lib.h: 301

ESL_LIB_EVT_PAWR_CONFIG = (ESL_LIB_EVT_BONDING_FINISHED + 1)# esl_lib.h: 301

ESL_LIB_EVT_PAWR_STATUS = (ESL_LIB_EVT_PAWR_CONFIG + 1)# esl_lib.h: 301

ESL_LIB_EVT_PAWR_RESPONSE = (ESL_LIB_EVT_PAWR_STATUS + 1)# esl_lib.h: 301

ESL_LIB_EVT_PAWR_DATA_REQUEST = (ESL_LIB_EVT_PAWR_RESPONSE + 1)# esl_lib.h: 301

ESL_LIB_EVT_SHUTDOWN_READY = (ESL_LIB_EVT_PAWR_DATA_REQUEST + 1)# esl_lib.h: 301

ESL_LIB_EVT_ERROR = (ESL_LIB_EVT_SHUTDOWN_READY + 1)# esl_lib.h: 301

ESL_LIB_EVT_IMAGE_TRANSFER_FINISHED = (ESL_LIB_EVT_ERROR + 1)# esl_lib.h: 301

ESL_LIB_EVT_IMAGE_TYPE = (ESL_LIB_EVT_IMAGE_TRANSFER_FINISHED + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONTROL_POINT_RESPONSE = (ESL_LIB_EVT_IMAGE_TYPE + 1)# esl_lib.h: 301

ESL_LIB_EVT_CONTROL_POINT_NOTIFICATION = (ESL_LIB_EVT_CONTROL_POINT_RESPONSE + 1)# esl_lib.h: 301

ESL_LIB_EVT_GENERAL = (ESL_LIB_EVT_CONTROL_POINT_NOTIFICATION + 1)# esl_lib.h: 301

esl_lib_evt_type_t = enum_esl_lib_evt_type_e# esl_lib.h: 301

enum_esl_lib_status_e = c_int# esl_lib.h: 352

ESL_LIB_STATUS_NO_ERROR = 0# esl_lib.h: 352

ESL_LIB_STATUS_UNSPECIFIED_ERROR = (ESL_LIB_STATUS_NO_ERROR + 1)# esl_lib.h: 352

ESL_LIB_STATUS_UNASSOCIATED = (ESL_LIB_STATUS_UNSPECIFIED_ERROR + 1)# esl_lib.h: 352

ESL_LIB_STATUS_GATT_TIMEOUT = (ESL_LIB_STATUS_UNASSOCIATED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_BONDING_FAILED = (ESL_LIB_STATUS_GATT_TIMEOUT + 1)# esl_lib.h: 352

ESL_LIB_STATUS_FEATURE_NOT_SUPPORTED = (ESL_LIB_STATUS_BONDING_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_INVALID_STATE = (ESL_LIB_STATUS_FEATURE_NOT_SUPPORTED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_INVALID_PARAMETERS = (ESL_LIB_STATUS_INVALID_STATE + 1)# esl_lib.h: 352

ESL_LIB_STATUS_UNEXPECTED_RESET = (ESL_LIB_STATUS_INVALID_PARAMETERS + 1)# esl_lib.h: 352

ESL_LIB_STATUS_GATT_ERROR = (ESL_LIB_STATUS_UNEXPECTED_RESET + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_TIMEOUT = (ESL_LIB_STATUS_GATT_ERROR + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_LOST = (ESL_LIB_STATUS_CONN_TIMEOUT + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_FAILED = (ESL_LIB_STATUS_CONN_LOST + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_CLOSE_FAILED = (ESL_LIB_STATUS_CONN_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_DISCOVERY_FAILED = (ESL_LIB_STATUS_CONN_CLOSE_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_ESL_SERVICE_VIOLATION = (ESL_LIB_STATUS_CONN_DISCOVERY_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_SUBSCRIBE_FAILED = (ESL_LIB_STATUS_CONN_ESL_SERVICE_VIOLATION + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_READ_FAILED = (ESL_LIB_STATUS_CONN_SUBSCRIBE_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_CONFIG_FAILED = (ESL_LIB_STATUS_CONN_READ_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_SET_MODE_FAILED = (ESL_LIB_STATUS_CONN_CONFIG_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_LINK_LAYER = (ESL_LIB_STATUS_CONN_SET_MODE_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_NO_PAWR_SYNC = (ESL_LIB_STATUS_LINK_LAYER + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_ERROR = (ESL_LIB_STATUS_NO_PAWR_SYNC + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_GOTO_FAILED = (ESL_LIB_STATUS_OTS_ERROR + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_INIT_FAILED = (ESL_LIB_STATUS_OTS_GOTO_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_WRITE_RESP_FAILED = (ESL_LIB_STATUS_OTS_INIT_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_UNEXPECTED_OFFSET = (ESL_LIB_STATUS_OTS_WRITE_RESP_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_TRANSFER_FAILED = (ESL_LIB_STATUS_OTS_UNEXPECTED_OFFSET + 1)# esl_lib.h: 352

ESL_LIB_STATUS_OTS_META_READ_FAILED = (ESL_LIB_STATUS_OTS_TRANSFER_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_SCAN_START_FAILED = (ESL_LIB_STATUS_OTS_META_READ_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_SCAN_STOP_FAILED = (ESL_LIB_STATUS_SCAN_START_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_SCAN_CONFIG_FAILED = (ESL_LIB_STATUS_SCAN_STOP_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_INIT_FAILED = (ESL_LIB_STATUS_SCAN_CONFIG_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_PAWR_START_FAILED = (ESL_LIB_STATUS_INIT_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_PAWR_STOP_FAILED = (ESL_LIB_STATUS_PAWR_START_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_PAWR_CONFIG_FAILED = (ESL_LIB_STATUS_PAWR_STOP_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_PAWR_SET_DATA_FAILED = (ESL_LIB_STATUS_PAWR_CONFIG_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_RESOURCE_EXCEEDED = (ESL_LIB_STATUS_PAWR_SET_DATA_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_PAST_INIT_FAILED = (ESL_LIB_STATUS_RESOURCE_EXCEEDED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_WRITE_CP_FAILED = (ESL_LIB_STATUS_PAST_INIT_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_TAG_CONFIG_FAILED = (ESL_LIB_STATUS_CONN_WRITE_CP_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONN_INIT_POLICY_FAILED = (ESL_LIB_STATUS_CONN_TAG_CONFIG_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_CONTROL_FAILED = (ESL_LIB_STATUS_CONN_INIT_POLICY_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_UNKNOWN_COMMAND = (ESL_LIB_STATUS_CONTROL_FAILED + 1)# esl_lib.h: 352

ESL_LIB_STATUS_SYSTEM_ERROR = (ESL_LIB_STATUS_UNKNOWN_COMMAND + 1)# esl_lib.h: 352

ESL_LIB_STATUS_DATABASE_ERROR = (ESL_LIB_STATUS_SYSTEM_ERROR + 1)# esl_lib.h: 352

ESL_LIB_STATUS_DATABASE_PERMISSION = (ESL_LIB_STATUS_DATABASE_ERROR + 1)# esl_lib.h: 352

esl_lib_status_t = enum_esl_lib_status_e# esl_lib.h: 352

enum_esl_lib_data_type_e = c_int# esl_lib.h: 380

ESL_LIB_DATA_TYPE_UNINITIALIZED = 0# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_ESL_ADDRESS = (ESL_LIB_DATA_TYPE_UNINITIALIZED + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_AP_SYNC_KEY = (ESL_LIB_DATA_TYPE_GATT_ESL_ADDRESS + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_RESPONSE_KEY = (ESL_LIB_DATA_TYPE_GATT_AP_SYNC_KEY + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_CONTROL_POINT = (ESL_LIB_DATA_TYPE_GATT_RESPONSE_KEY + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_CURRENT_TIME = (ESL_LIB_DATA_TYPE_GATT_CONTROL_POINT + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_DISPLAY_INFO = (ESL_LIB_DATA_TYPE_GATT_CURRENT_TIME + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_IMAGE_INFO = (ESL_LIB_DATA_TYPE_GATT_DISPLAY_INFO + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_SENSOR_INFO = (ESL_LIB_DATA_TYPE_GATT_IMAGE_INFO + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_LED_INFO = (ESL_LIB_DATA_TYPE_GATT_SENSOR_INFO + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_PNP_ID = (ESL_LIB_DATA_TYPE_GATT_LED_INFO + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_SERIAL_NUMBER = (ESL_LIB_DATA_TYPE_GATT_PNP_ID + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_OTS_FEATURE = (ESL_LIB_DATA_TYPE_GATT_SERIAL_NUMBER + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_GATT_OTS_OBJECT_TYPE = (ESL_LIB_DATA_TYPE_GATT_OTS_FEATURE + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_PAWR_DATA = (ESL_LIB_DATA_TYPE_GATT_OTS_OBJECT_TYPE + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_PAWR_RESP_SLOT = (ESL_LIB_DATA_TYPE_PAWR_DATA + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_PAWR_SUBEVENT = (ESL_LIB_DATA_TYPE_PAWR_RESP_SLOT + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_SUBEVENT_START = (ESL_LIB_DATA_TYPE_PAWR_SUBEVENT + 1)# esl_lib.h: 380

ESL_LIB_DATA_TYPE_SUBEVENT_DATA_COUNT = (ESL_LIB_DATA_TYPE_SUBEVENT_START + 1)# esl_lib.h: 380

esl_lib_data_type_t = enum_esl_lib_data_type_e# esl_lib.h: 380

# esl_lib.h: 386
class struct_esl_lib_tlv_s(Structure):
    pass

struct_esl_lib_tlv_s.__slots__ = [
    'type',
    'data',
]
struct_esl_lib_tlv_s._fields_ = [
    ('type', esl_lib_data_type_t),
    ('data', esl_lib_long_array_t),
]

esl_lib_tlv_t = struct_esl_lib_tlv_s# esl_lib.h: 386

# esl_lib.h: 392
class struct_esl_lib_ots_features_s(Structure):
    pass

struct_esl_lib_ots_features_s.__slots__ = [
    'oacp_features',
    'olcp_features',
]
struct_esl_lib_ots_features_s._fields_ = [
    ('oacp_features', uint32_t),
    ('olcp_features', uint32_t),
]

esl_lib_ots_features_t = struct_esl_lib_ots_features_s# esl_lib.h: 392

enum_esl_lib_characteristic_index_e = c_int# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_ADDRESS = 0# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_AP_SYNC_KEY_MATERIAL = 1# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_RESPONSE_KEY_MATERIAL = 2# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_CURRENT_ABSOLUTE_TIME = 3# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_DISPLAY_INFORMATION = 4# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_IMAGE_INFORMATION = 5# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_SENSOR_INFORMATION = 6# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_LED_INFORMATION = 7# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_ESL_CONTROL_POINT = 8# esl_lib.h: 406

ESL_LIB_CHARACTERISTIC_INDEX_SIZE = 9# esl_lib.h: 406

esl_lib_characteristic_index_t = enum_esl_lib_characteristic_index_e# esl_lib.h: 406

enum_esl_lib_characteristic_index_dis_e = c_int# esl_lib.h: 412

ESL_LIB_CHARACTERISTIC_INDEX_DIS_PNP_ID = 0# esl_lib.h: 412

ESL_LIB_CHARACTERISTIC_INDEX_DIS_SN = 1# esl_lib.h: 412

ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE = 2# esl_lib.h: 412

esl_lib_characteristic_index_dis_t = enum_esl_lib_characteristic_index_dis_e# esl_lib.h: 412

esl_lib_ots_gattdb_handles_t = uint16_t * int(12)# esl_lib.h: 415

# esl_lib.h: 419
class struct_esl_lib_gattdb_handles_services_s(Structure):
    pass

struct_esl_lib_gattdb_handles_services_s.__slots__ = [
    'esl',
    'ots',
    'dis',
]
struct_esl_lib_gattdb_handles_services_s._fields_ = [
    ('esl', uint32_t),
    ('ots', uint32_t),
    ('dis', uint32_t),
]

# esl_lib.h: 427
class struct_esl_lib_gattdb_handles_s(Structure):
    pass

struct_esl_lib_gattdb_handles_s.__slots__ = [
    'services',
    'esl_characteristics',
    'dis_characteristics',
    'ots_characteristics',
]
struct_esl_lib_gattdb_handles_s._fields_ = [
    ('services', struct_esl_lib_gattdb_handles_services_s),
    ('esl_characteristics', uint16_t * int(ESL_LIB_CHARACTERISTIC_INDEX_SIZE)),
    ('dis_characteristics', uint16_t * int(ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE)),
    ('ots_characteristics', esl_lib_ots_gattdb_handles_t),
]

esl_lib_gattdb_handles_t = struct_esl_lib_gattdb_handles_s# esl_lib.h: 427

# esl_lib.h: 437
class struct_esl_lib_evt_system_boot_s(Structure):
    pass
